--- a/src/style.css
+++ b/src/style.css
@@ -120,3 +120,78 @@ input[type="checkbox"]{
   height: 500px;
   width: 600px;
 }
+
+.scroll-text{
+  color: white;
+  display: block;
+  position: absolute;
+  text-align: center;
+  bottom: 50px;
+  left: 49.2%;
+  font-size: 15px;
+  z-index: 100%;
+  text-decoration: none;
+  text-shadow: none;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: fade_move_down1 5s ease-in-out infinite;
+  -moz-animation:    fade_move_down1 5s ease-in-out infinite;
+  animation:         fade_move_down1 8s ease-in-out infinite;
+}
+
+.scroll-down{
+  position: absolute;
+  left: 50%;
+  bottom: 30px;
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  z-index: 100;
+  text-decoration: none;
+  text-shadow: 0;
+  width: 20px;
+  height: 20px;
+  border-bottom: 2px solid #f6f4eb;
+  border-right: 2px solid #f6f4eb;
+  z-index: 9;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%) rotate(45deg);
+  -moz-transform: translate(-50%, 0%) rotate(45deg);
+  transform: translate(-50%, 0%) rotate(45deg);
+  -webkit-animation: fade_move_down 5s ease-in-out infinite;
+  -moz-animation:    fade_move_down 5s ease-in-out infinite;
+  animation:         fade_move_down 8s ease-in-out infinite;
+}
+
+@-webkit-keyframes fade_move_down1 {
+  0%   { -webkit-transform:translate(0,-10px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -webkit-transform:translate(0,10px); opacity: 0; }
+}
+@-moz-keyframes fade_move_down1 {
+  0%   { -webkit-transform:translate(0,-10px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -webkit-transform:translate(0,10px); opacity: 0; }
+}
+
+@keyframes fade_move_down1 {
+  0%   { -webkit-transform:translate(0,-10px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -webkit-transform:translate(0,10px); opacity: 0; }
+}
+
+@-webkit-keyframes fade_move_down {
+  0%   { -webkit-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -webkit-transform:translate(0,10px) rotate(45deg); opacity: 0; }
+}
+@-moz-keyframes fade_move_down {
+  0%   { -moz-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -moz-transform:translate(0,10px) rotate(45deg); opacity: 0; }
+}
+@keyframes fade_move_down {
+  0%   { transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { transform:translate(0,10px) rotate(45deg); opacity: 0; }
+}
