--- a/src/style.css
+++ b/src/style.css
@@ -5,14 +5,28 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+body{
+  background-color: #131316;
+}
 section{
-  background-color: green;
+  color: white;
   border: none;
   height: 100vh;
+  display: grid;
+  place-items: center;
+  align-content: center;
 }
-.about{
-position: relative; 
+.about{ 
 margin-top: 100vh;
+opacity: 0;
+filter: blur(5px);
+transform: translateX(-100%);
+transition: all 4s;
+}
+.show{
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
 }
 .base{
   position: fixed;
@@ -28,7 +42,7 @@ margin-top: 100vh;
   clip-path: circle(75%);
 }
 .back-video{
-  position: fixed;
+  position: absolute;
   right: 0;
   bottom: 0;
   z-index: -1;
