--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ section{
   align-content: center;
 }
 footer{
-  background-color: black;
+  background-color: #1e1f22;
   color: white;
   bottom: 0;
   font-size: 16px;
